Issue #11214: Moved OrderedPropertiesCheck from SUPPRESSED_CHECKS to PERMANENT_SUPPRESSED_CHECKS collection