@@ -137,9 +137,9 @@ public final class InlineConfigParser {
      *  multiline comment.
      *  Such check files needs to be permanently suppressed.
      */
-    private static final Set<String> PERMANENT_SUPPRESSED_CHECKS = new HashSet<>(Arrays.asList(
+    private static final Set<String> PERMANENT_SUPPRESSED_CHECKS = Set.of(
             // Inlined config is not supported for non java files.
-            "com.puppycrawl.tools.checkstyle.checks.OrderedPropertiesCheck"));
+            "com.puppycrawl.tools.checkstyle.checks.OrderedPropertiesCheck");
 
     /** Stop instances being created. **/
     private InlineConfigParser() {
